# gachi-bot

./: .gitignore  README.md  pom.xml  pyproject.toml  run.sh
.github/workflows/: main.yml
bot_db/: add_bad_words.sql  docker-compose.yml  init.sql
gachi_bot/: bad_words.py  main.py  message_utils.py  stat_loader.py  user.py  users.json
src/main/java/com/ardonplay/gachi_bot/: GachiBotSpringApplication.java
src/main/java/com/ardonplay/gachi_bot/config/: BotConfig.java
src/main/java/com/ardonplay/gachi_bot/model/: BadWord.java  Mat.java  User.java  UserRepository.java  WhiteWord.java
src/main/java/com/ardonplay/gachi_bot/repository/: BadWordRepository.java  MatRepository.java  UserRepository.java  WhiteWordRepository.java
src/main/java/com/ardonplay/gachi_bot/service/: BotInitializer.java  GachiBot.java  JsonParser.java
src/main/java/com/ardonplay/gachi_bot/service/BotServices/: BadWordsHandler.java  BotService.java  DbController.java  JsonParser.java  Messagies.java  UserHandler.java
src/main/java/com/ardonplay/gachi_bot/service/userTelegramModel/: User.java
src/main/java/org/ardonplay/: Bot.java  JsonParser.java  Main.java
src/main/resources/: application.properties  bad_words.json  users.json  white_list.json
src/main/resources/stickers/: rocket.webm
src/test/java/com/ardonplay/gachi_bot/: GachiBotSpringApplicationTests.java
